--- a/package.json
+++ b/package.json
@@ -3,17 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.47",
+    "@fullcalendar/core": "^5.0.0-beta.4",
+    "@fullcalendar/daygrid": "^5.0.0-beta.4",
+    "@fullcalendar/interaction": "^5.0.0-beta.4",
+    "@fullcalendar/list": "^5.0.0-beta.4",
+    "@fullcalendar/react": "^5.0.0-beta.4",
+    "@fullcalendar/timegrid": "^5.0.0-beta.4",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
+    "@types/react-cropper": "^1.3.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/revalidate": "^1.1.2",
+    "axios": "^0.19.2",
+    "date-fns": "^2.14.0",
+    "final-form": "^4.20.0",
+    "i18next": "^19.4.5",
+    "i18next-browser-languagedetector": "^4.2.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "mobx-react-lite": "^2.0.7",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
+    "react-final-form": "^6.5.0",
+    "react-i18next": "^11.5.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "react-toastify": "^6.0.5",
+    "react-widgets": "^4.5.0",
+    "react-widgets-date-fns": "^4.1.0",
+    "revalidate": "^1.2.0",
+    "semantic-ui-react": "^0.88.2",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
